<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.thinking.machines.tmapp.SignupActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/signup_activity_title_text_view_text"
        android:id="@+id/signUpTitleTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstNameEditText"
        android:hint="@string/signup_activity_first_name_edit_text_hint_text"
        android:layout_below="@+id/signUpTitleTextView"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_activity_last_name_edit_text_hint_text"
        android:id="@+id/lastNameEditText"
        android:layout_below="@+id/firstNameEditText"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_activity_mobile_number_edit_text_hint_text"
        android:id="@+id/mobileNumberEditText"
        android:layout_below="@+id/lastNameEditText"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_activity_username_edit_text_hint_text"
        android:id="@+id/usernameEditText"
        android:layout_below="@+id/mobileNumberEditText"
        android:layout_alignParentStart="true" />
</RelativeLayout>
